--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -15,9 +15,13 @@
 		<dbunit.version>2.5.0</dbunit.version>
 		<h2.version>1.4.186</h2.version>
 		<mysql.version>5.1.34</mysql.version>
+
+		<tomcat-server>localhost</tomcat-server>
+		<tomcat-url>http://localhost:8080/manager/text</tomcat-url>
 	</properties>
 
 	<build>
+		<finalName>computerdatabase</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -47,7 +51,33 @@
 					<killAfter>-1</killAfter>
 				</configuration>
 			</plugin>
-
+			<!-- For Maven Tomcat Plugin -->
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>tomcat-run</id>
+						<goals>
+							<goal>exec-war-only</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<server>${tomcat-server}</server>
+							<url>${tomcat-url}</url>
+							<path>/computerdatabase</path>
+							<!-- optional, needed only if you want to use a preconfigured server.xml 
+								file <serverXml>src/main/tomcatconf/server.xml</serverXml> -->
+							</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -92,7 +122,7 @@
 			<version>${powermock.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito</artifactId>
