--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -5,7 +5,8 @@
 	<artifactId>cdb</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>computer-database</name>
+	<name>computerdatabase</name>
+	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,6 +16,7 @@
 		<dbunit.version>2.5.0</dbunit.version>
 		<h2.version>1.4.186</h2.version>
 		<mysql.version>5.1.34</mysql.version>
+		<javax.version>3.1.0</javax.version>
 
 		<tomcat-server>localhost</tomcat-server>
 		<tomcat-url>http://localhost:8080/manager/text</tomcat-url>
@@ -28,12 +30,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<compilerArguments>
-						<source>1.8</source>
-						<target>1.8</target>
-					</compilerArguments>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -66,10 +67,8 @@
 						<configuration>
 							<server>${tomcat-server}</server>
 							<url>${tomcat-url}</url>
-							<path>/computerdatabase</path>
-							<!-- optional, needed only if you want to use a preconfigured server.xml 
-								file <serverXml>src/main/tomcatconf/server.xml</serverXml> -->
-							</configuration>
+							<path>/${project.build.finalName}</path>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -82,6 +81,26 @@
 	</build>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${javax.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
