--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
 		<powermock.version>1.6.2</powermock.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.1</slf4j.version>
@@ -17,6 +18,9 @@
 		<h2.version>1.4.186</h2.version>
 		<mysql.version>5.1.34</mysql.version>
 		<javax.version>3.1.0</javax.version>
+		<jstl.version>1.1.2</jstl.version>
+		<taglibs.version>1.1.2</taglibs.version>
+		<validator.version>1.4.0</validator.version>
 
 		<tomcat-server>localhost</tomcat-server>
 		<tomcat-url>http://localhost:8080/manager/text</tomcat-url>
@@ -30,8 +34,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 
@@ -92,7 +96,7 @@
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
+			<version>${taglibs.version}</version>
 		</dependency>
 
 		<dependency>
@@ -105,7 +109,7 @@
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.1.2</version>
+			<version>${jstl.version}</version>
 		</dependency>
 
 		<dependency>
@@ -123,7 +127,7 @@
 		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
-			<version>1.4.0</version>
+			<version>${validator.version}</version>
 		</dependency>
 
 		<!-- TEST -->
