--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -9,6 +9,16 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<!-- PLugins -->
+		<compiler.version>3.1</compiler.version>
+		<exec.version>1.3.2</exec.version>
+		<war.version>2.5</war.version>
+		<tomcat7.version>2.2</tomcat7.version>
+
+		<tomcat7.server>cdbServer</tomcat7.server>
+		<tomcat7.url>http://localhost:8080/manager/text</tomcat7.url>
+		<tomcat7.path>/cdb</tomcat7.path>
+		<!-- Depedencies -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<powermock.version>1.6.2</powermock.version>
@@ -18,21 +28,21 @@
 		<h2.version>1.4.186</h2.version>
 		<mysql.version>5.1.34</mysql.version>
 		<javax.version>3.1.0</javax.version>
+		<javax.jsp.version>2.2</javax.jsp.version>
 		<jstl.version>1.1.2</jstl.version>
 		<taglibs.version>1.1.2</taglibs.version>
 		<validator.version>1.4.0</validator.version>
-
-		<tomcat-server>localhost</tomcat-server>
-		<tomcat-url>http://localhost:8080/manager/text</tomcat-url>
+		<logback.version>1.1.2</logback.version>
+		<bonecp.version>0.8.0.RELEASE</bonecp.version>
 	</properties>
 
 	<build>
-		<finalName>computerdatabase</finalName>
+		<finalName>cdb</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>${compiler.version}</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -42,7 +52,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.3.2</version>
+				<version>${exec.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -60,26 +70,17 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<executions>
-					<execution>
-						<id>tomcat-run</id>
-						<goals>
-							<goal>exec-war-only</goal>
-						</goals>
-						<phase>package</phase>
-						<configuration>
-							<server>${tomcat-server}</server>
-							<url>${tomcat-url}</url>
-							<path>/${project.build.finalName}</path>
-						</configuration>
-					</execution>
-				</executions>
+				<version>${tomcat7.version}</version>
+				<configuration>
+					<url>${tomcat7.url}</url>
+					<server>${tomcat7.server}</server>
+					<path>${tomcat7.path}</path>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.5</version>
+				<version>${war.version}</version>
 			</plugin>
 		</plugins>
 	</build>
@@ -94,16 +95,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>${taglibs.version}</version>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${javax.jsp.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.2</version>
-			<scope>provided</scope>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>${taglibs.version}</version>
 		</dependency>
 
 		<dependency>
@@ -125,10 +126,24 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
 			<version>${validator.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.jolbox</groupId>
+			<artifactId>bonecp</artifactId>
+			<version>${bonecp.version}</version>
+		</dependency>
+
 
 		<!-- TEST -->
 		<dependency>
