--- a/cdb/src/main/resources/config.properties
+++ b/cdb/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-url=jdbc:mysql://127.0.0.1:3306/computer-database-db?zeroDateTimeBehavior=convertToNull
-user=admincdb
-password=qwerty1234
-driver=com.mysql.jdbc.Driver
+# App
+jdbc.dev.url=jdbc:mysql://localhost:3306/computer-database-db?zeroDateTimeBehavior=convertToNull
+jdbc.dev.username=root
+jdbc.dev.password=root
+jdbc.dev.driver=com.mysql.jdbc.Driver
