--- a/cdb/src/test/resources/config.properties
+++ b/cdb/src/test/resources/config.properties
@@ -1,4 +1,5 @@
-url=jdbc:h2:mem:computer-database-db;DB_CLOSE_DELAY=-1
-user=sa
-password=
-driver=org.h2.Driver
+# Test
+jdbc.test.url=jdbc:h2:mem:computer-database-db;DB_CLOSE_DELAY=-1
+jdbc.test.user=sa
+jdbc.test.password=
+jdbc.test.driver=org.h2.Driver
