--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -25,7 +25,7 @@
 		<tomcat7.server>cdbServer</tomcat7.server>
 		<tomcat7.url>http://localhost:8080/manager/text</tomcat7.url>
 
-		<!-- Depedencies -->
+		<!-- DEPENDENCIES -->
 		<!-- Log -->
 		<logback.version>1.1.2</logback.version>
 		<slf4j.version>1.7.10</slf4j.version>
@@ -41,17 +41,19 @@
 		<!-- Connection -->
 		<mysql.version>5.1.34</mysql.version>
 		<commons.dbcp2.version>2.1</commons.dbcp2.version>
-		<bonecp.version>0.8.0.RELEASE</bonecp.version>
 
 		<!-- Javax - Jsp -->
 		<javax.version>3.1.0</javax.version>
 		<javax.jsp.version>2.2</javax.jsp.version>
+		<javax.validation.version>1.1.0.Final</javax.validation.version>
 		<jstl.version>1.1.2</jstl.version>
 		<taglibs.version>1.1.2</taglibs.version>
-		<validator.version>1.4.0</validator.version>
+		
+		<hibernate.validation.version>5.1.3.Final</hibernate.validation.version>	
 
 		<!-- Spring -->
-		<spring.version>4.1.5.RELEASE</spring.version>
+		<spring.version>4.1.6.RELEASE</spring.version>
+		
 	</properties>
 
 	<build>
@@ -104,8 +106,26 @@
 	</build>
 
 	<dependencies>
-
+		<!-- Bean validation -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${javax.validation.version}</version>
+		</dependency>
+		<!-- Bean Validation provider -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate.validation.version}</version>
+		</dependency>
 		<!-- Spring -->
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -178,12 +198,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>com.jolbox</groupId>
-			<artifactId>bonecp</artifactId>
-			<version>${bonecp.version}</version>
-		</dependency>
-
 		<!-- DBCP connection pooling -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -204,18 +218,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>commons-validator</groupId>
-			<artifactId>commons-validator</artifactId>
-			<version>${validator.version}</version>
-		</dependency>
-
 		<!-- Test -->
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 
