Add i18n on dashboard

--- a/cdb/src/main/webapp/WEB-INF/web.xml
+++ b/cdb/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,14 @@
 		<error-code>500</error-code>
 		<location>/WEB-INF/view/500.jsp</location>
 	</error-page>
+	
+	<jsp-config>
+	    <jsp-property-group>
+	        <url-pattern>*.jsp</url-pattern>
+	        <page-encoding>UTF-8</page-encoding>
+	    </jsp-property-group>
+	</jsp-config>
+	
 
 	<!-- Spring Context -->
 	
