--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -73,6 +73,8 @@
 
 		<!-- Spring -->
 		<spring.version>4.1.6.RELEASE</spring.version>
+		<spring.security.version>4.0.0.RELEASE</spring.security.version>
+		
 
 		<!-- 99 empty -->
 		<empty.99.version>99-empty</empty.99.version>
@@ -223,6 +225,12 @@
 				<version>${spring.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+
 			<!-- Hibernate -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -354,7 +362,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<dependencies>
 		<!-- JSTL + tag --> <!-- Don't move it : avoid Eclipse's Bug (just for web App) -->
 		<dependency>
