--- a/cdb/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/cdb/webapp/src/main/webapp/WEB-INF/web.xml
@@ -28,16 +28,29 @@
 
 	<!-- Spring Context -->
 	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/service-context.xml classpath:/binding-context.xml /WEB-INF/dispatcher-servlet.xml</param-value>
-	</context-param>
-	
 	<listener>
    		<listener-class>
         	org.springframework.web.context.ContextLoaderListener
   	 	</listener-class>
 	</listener>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:/spring-security.xml classpath:/service-context.xml /WEB-INF/dispatcher-servlet.xml</param-value>
+	</context-param>
+	
+	
+	<!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>	
+	
 	
     <servlet>
 		<servlet-name>dispatcher</servlet-name>
