--- a/cdb/console/pom.xml
+++ b/cdb/console/pom.xml
@@ -11,6 +11,7 @@
 
 	<artifactId>console</artifactId>
 	<name>console</name>
+	<packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
 	
 	<properties>
@@ -23,10 +24,26 @@
 			<groupId>com.excilys</groupId>
 			<artifactId>service</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>cdb</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+					<skipAssembly>false</skipAssembly>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.excilys.cdb.cli.Cli</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
