--- a/cdb/console/pom.xml
+++ b/cdb/console/pom.xml
@@ -24,6 +24,11 @@
 			<groupId>com.excilys</groupId>
 			<artifactId>service</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-server</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
