--- a/cdb/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/cdb/webservice/src/main/webapp/WEB-INF/web.xml
@@ -11,21 +11,21 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:webservice-context.xml</param-value>
+		<param-value>classpath:webservice-context.xml /WEB-INF/dispatcher-servlet.xml</param-value>
 	</context-param>
 
-	<servlet>
-		<servlet-name>jersey-serlvet</servlet-name>
-		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+		<servlet>
+		<servlet-name>mvc-dispatcher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.excilys.cdb.api</param-value>
+			<param-name>contextConfigLocation</param-name>
+			<param-value></param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>jersey-serlvet</servlet-name>
-		<url-pattern>/api/*</url-pattern>
+		<servlet-name>mvc-dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
