--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -83,8 +83,11 @@
 		<!-- Hibernate -->
 		<hibernate.version>4.3.8.Final</hibernate.version>
 
-		<!-- Jersey -->
-		<jersey.version>2.17</jersey.version>
+		<resteasy.client.version>3.0.11.Final</resteasy.client.version>
+		<jaxrs.version>2.0.1</jaxrs.version>
+		<!-- Jackson -->
+		<jackson.version>2.5.3</jackson.version>
+		<jackson.provider.version>3.0.11.Final</jackson.provider.version>
 
 		<!-- Plugin -->
 		<version.maven.assembly.plugin>2.5.3</version.maven.assembly.plugin>
@@ -116,7 +119,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -326,22 +329,34 @@
 				<version>${commons.dbcp2.version}</version>
 			</dependency>
 
-			<!-- Jersey -->
-		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>${jersey.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.ext</groupId>
-			<artifactId>jersey-spring3</artifactId>
-			<version>${jersey.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>${jersey.version}</version>
-		</dependency>
+			<!-- JACKSON -->
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-jackson-provider</artifactId>
+				<version>${jackson.provider.version}</version>
+			</dependency>
+
+			<!-- REST -->
+			<dependency>
+				<groupId>javax.ws.rs</groupId>
+				<artifactId>javax.ws.rs-api</artifactId>
+				<version>${jaxrs.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-client</artifactId>
+				<version>${resteasy.client.version}</version>
+			</dependency>
 
 			<!-- Logging -->
 			<dependency>
