--- a/cdb/pom.xml
+++ b/cdb/pom.xml
@@ -98,9 +98,10 @@
         <assertj.version>2.0.0</assertj.version>
 
         <!-- H2 -->
-        <h2database.version>1.4.186</h2database.version>
+        <h2.version>1.4.187</h2.version>
 
-        <!-- Db unti -->
+        <!-- Db unit -->
+        <dbunit.version>2.5.0</dbunit.version>
         <excilys.dbunit.spring.version>1.4.0</excilys.dbunit.spring.version>
     </properties>
 
@@ -427,50 +428,34 @@
                 <version>${selenium.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.excilys.ebi.spring-dbunit</groupId>
+                <artifactId>spring-dbunit-test</artifactId>
+                <version>${excilys.dbunit.spring.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- Test -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2database.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.dbunit</groupId>
-            <artifactId>dbunit</artifactId>
-            <version>${dbunit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.excilys.ebi.spring-dbunit</groupId>
-            <artifactId>spring-dbunit-test</artifactId>
-            <version>${excilys.dbunit.spring.version}</version>
-        </dependency>
-    </dependencies>
 </project>
